Added in all current exercises

--- a/exercises/exercise_topics/AdoptingSafeWorkingPractices.html
+++ b/exercises/exercise_topics/AdoptingSafeWorkingPractices.html
@@ -76,17 +76,15 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/safeWorkingPractice.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\7. Adopting safe working practices, recognise and react to potential hazards\DTBase_Adopting_safe_working_practices.pdf">Adopting Safe Working Practices</a>
+                            <a href="..\..\documents\Q&A\safe_working_practices_exercises\Adopting_safe_working_practices_Q&A.pdf">Adopting Safe Working Practices</a>
                         </div>
                     </div>
-                </div> -->
-                <div class="comingsoon">
-                    Exam style questions and solutions coming soon!
                 </div>
+
             </div>
         </div>
 
