--- a/exercises/exercise_topics/CurrentLegislation.html
+++ b/exercises/exercise_topics/CurrentLegislation.html
@@ -74,13 +74,13 @@
             <h2>Current Legislation</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/consumerRights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\10. Current legislation\DTBase_CurrentLegislation_ConsumerRightsLegislation.pdf">Consumer Rights Legislation</a>
+                            <a href="..\..\documents\Q&A\current_legislation_exercises\Consumer_rights_legislation_Q&A.pdf">Consumer Rights Legislation</a>
                         </div>
                     </div>
                 </div>
@@ -89,16 +89,13 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/healthandsafetylaws.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\10. Current legislation\DTBase_CurrentLegislation_HealthAndSafetyLaws.pdf">Health and Safety Laws</a>
+                            <a href="..\..\documents\Q&A\current_legislation_exercises\Health_and_safety_Q&A.pdf">Health and Safety Laws</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
+
 
         </div>
 
