--- a/exercises/exercise_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/exercises/exercise_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -74,13 +74,13 @@
             <h2>Designing for Maintenance and the Cleaner Environment</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/productLifeCycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_ProductLifeCycle.pdf">Product Life Cycle</a>
+                            <a href="..\..\documents\Q&A\design_for_maintenance_and_cleaner_environment_exercises\products_life_cycle_Q&A.pdf">Product Life Cycle</a>
                         </div>
                     </div>
                 </div>
@@ -89,15 +89,13 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/cleanerTech.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_WiderIssuesCleanerTechnologies.pdf">Wider Issues of Using Cleaner Technologies</a>
+                            <a href="..\..\documents\Q&A\design_for_maintenance_and_cleaner_environment_exercises\Wider_issues_of_using_cleaner_technology_Q&A.pdf">Wider Issues of Using Cleaner Technologies</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
+  
         </div>
 
         <div class="footer">
