--- a/exercises/exercise_topics/EffectsOfTechnologicalDevelopments.html
+++ b/exercises/exercise_topics/EffectsOfTechnologicalDevelopments.html
@@ -76,17 +76,15 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/effectsoftechdev.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\6. Effects of technological developments\DTBase_Effects_of_technological_developments.pdf">Effects of Technological Developments</a>
+                            <a href="..\..\documents\Q&A\effects_of_tech_dev_exercises\Effects_tech_developements_Q&A.pdf">Effects of Technological Developments</a>
                         </div>
                     </div>
-                </div> -->
-                <div class="comingsoon">
-                    Exam style questions and solutions coming soon!
                 </div>
+
             </div>
         </div>
 
