--- a/exercises/exercise_topics/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/exercises/exercise_topics/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -74,13 +74,13 @@
             <h2>Factors Influencing the Development of Products</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/userCentreDesign.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_UserCentredDesign.pdf">User Centred Design</a>
+                            <a href="..\..\documents\Q&A\factors_influencing_development_of_products_exercises\User_centred_design_Q&A.pdf">User Centred Design</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/ergonomics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_Anthropometrics_Ergonomics.pdf">Influence on Design of Anthropometrics and Ergonomics</a>
+                            <a href="..\..\documents\Q&A\factors_influencing_development_of_products_exercises\Influence_on_design_of_anthropometrics_and_ergonomics_Q&A.pdf">Influence on Design of Anthropometrics and Ergonomics</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/aesthetics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_Aesthetics.pdf">Influence of Aesthetics</a>
+                            <a href="..\..\documents\Q&A\factors_influencing_development_of_products_exercises\Influence_of_aesthetics_Q&A.pdf">Influence of Aesthetics</a>
                         </div>
                     </div>
                 </div>
@@ -107,17 +107,13 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/designinfluences.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_DesignInfluences_MethodsFigures.pdf">Design Influences Methods and Figures</a>
+                            <a href="..\..\documents\Q&A\factors_influencing_development_of_products_exercises\Design_influence_methods_figures_Q&A.pdf">Design Influences Methods and Figures</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-
-
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
+
         </div>
 
         <div class="footer">
