--- a/exercises/exercise_topics/FurtherProcessesAndTechniques.html
+++ b/exercises/exercise_topics/FurtherProcessesAndTechniques.html
@@ -74,22 +74,22 @@
             <h2>Further Processes and Techniques</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/projectManagement.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/stagesOfProductLifecycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\12. Further processes and techniques\DTBase_Stages_Of_A_Products_Life_Cycle.pdf">Stages of a Product's Life Cycle</a>
+                            <a href="..\..\documents\Q&A\further_processes_techniques_exercises\Stages_of_products_life_cycle_Q&A.pdf">Stages of a Product's Life Cycle</a>
                         </div>
                     </div>
                 </div>
@@ -98,15 +98,13 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/createEvaluateDesignIdea.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\12. Further processes and techniques\DTBase_Strategies_Techniques_And_Approaches_To_Explore_Create_And_Evaluate_Design_Ideas.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
+                            <a href="..\..\documents\Q&A\further_processes_techniques_exercises\Strategies_techniques_and_approaches_to_explore_and_create_design_idea_Q&A.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
+
             
         </div>
 
