--- a/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -74,22 +74,22 @@
             <h2>Processes, Techniques and Specialist Tools</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_alloy.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Alloying.pdf">Alloying</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_casting.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Casting.pdf">Casting</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Casting_Q&A.pdf">Casting</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_design_decisions.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_DesignDecisions.pdf">Design Decisions</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Design_decisions_Q&A.pdf">Design Decisions</a>
                         </div>
                     </div>
                 </div>
@@ -107,25 +107,25 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_finishing.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_FinishingTechniques.pdf">Finishing Techniques</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Finishing_techniques_Q&A.pdf">Finishing Techniques</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_heattreatment.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_HeatTreatments.pdf">Heat Treatments</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_joining.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_JoiningTechniques.pdf">Joining Techniques</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Joining_techniques_Q&A.pdf">Joining Techniques</a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_lamination.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Lamination.pdf">Lamination</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Lamination_Q&A.pdf">Lamination</a>
                         </div>
                     </div>
                 </div>
@@ -143,30 +143,30 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_machining.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Machining.pdf">Machining</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Machining_Q&A.pdf">Machining</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_marking_out.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_MarkingOutTechniques.pdf">Marking Out Techniques</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_moulding.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Moulding.pdf">Moulding</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Moulding_Q&A.pdf">Moulding</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_printing.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
@@ -186,9 +186,6 @@
             </div> -->
 
 
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
-            </div>
         </div>
 
         <div class="footer">
