--- a/exercises/exercise_topics/DigitalTechnologies.html
+++ b/exercises/exercise_topics/DigitalTechnologies.html
@@ -74,13 +74,13 @@
             <h2>Digital Technologies</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/Digital_Tech/DigiTech_note_CAD.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedDesign.pdf">Computer Aided Design</a>
+                            <a href="..\..\documents\Q&A\digital_tech_exercises\Computer_aided_design_Q&A.pdf">Computer Aided Design</a>
                         </div>
                     </div>
                 </div>
@@ -89,16 +89,13 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/Digital_Tech/DigiTech_note_CAM.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedManufacturing_RapidPrototyping.pdf">Computer Aided Manufacturing and Rapid Prototyping</a>
+                            <a href="..\..\documents\Q&A\digital_tech_exercises\Computer_aided_manufacture_Q&A.pdf">Computer Aided Manufacturing and Rapid Prototyping</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
+
         </div>
 
         <div class="footer">
