--- a/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -74,26 +74,26 @@
             <h2>Information Handling, Modelling and Forward Planning</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_CollectionCollationAndAnalysisToMakeDecisions.pdf">Collection Collation and Analysis to Make Decisions</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/modelCost.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_ModellingTheCostingOfProjectsToAchieveOptimumOutcome.pdf">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
+                            <a href="..\..\documents\Q&A\information_handling_planning_exercises\modelling_the_costing_of_projects_to_achieve_optimum_outcome_Q&A.pdf">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
                         </div>
                     </div>
                 </div>
-
+<!-- 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/propertyrights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
@@ -101,22 +101,19 @@
                             <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_PropertyRights.pdf">Property Rights</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/standardsForProducts.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_StandardsForProducts.pdf">Standards for Products</a>
+                            <a href="..\..\documents\Q&A\information_handling_planning_exercises\Standards_of_products_Q&A.pdf">Standards for Products</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
+
         </div>
 
         <div class="footer">
