--- a/exercises/exercise_topics/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/exercises/exercise_topics/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -76,17 +76,15 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
 
-                <div class="comingsoon">
-                    Exam style questions and solutions coming soon!
-                </div>
-                <!-- <div class="portfolio-item-wrapper-notes">
+
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnotecharacteristics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
+                            <a href="..\..\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
             </div>
         </div>
