--- a/exercises/exercise_topics/materialsnotes.html
+++ b/exercises/exercise_topics/materialsnotes.html
@@ -128,13 +128,13 @@
                             <a href="..\..\documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnotesmartMats.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
+                            <a href="..\..\documents\Q&A\Materials\smart_materials_Q&A.pdf">Smart Materials</a>
                         </div>
                     </div>
                 </div>
@@ -143,10 +143,10 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
+                            <a href="..\..\documents\Q&A\Materials\Modern_materials_Q&A.pdf">Modern Materials</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 
             </div>
         </div>
