--- a/exercises/exercise_topics/materialsnotes.html
+++ b/exercises/exercise_topics/materialsnotes.html
@@ -112,11 +112,11 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
+                            <a href="..\..\documents\Q&A\Materials\papers_and_boards_Q&A.pdf">Paper and Boards</a>
                         </div>
                     </div>
                 </div>
@@ -125,10 +125,10 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
+                            <a href="..\..\documents\Q&A\Materials\Textiles_Q&A.pdf">textiles</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnotesmartMats.jpg)"></div>
