--- a/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -76,14 +76,14 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_alloy.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Alloying.pdf">Alloying</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Alloying_Q&A.pdf">Alloying</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_casting.jpg)"></div>
@@ -112,14 +112,14 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_heattreatment.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_HeatTreatments.pdf">Heat Treatments</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Heat_treatments_Q&A.pdf">Heat Treatments</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_joining.jpg)"></div>
@@ -166,24 +166,24 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_printing.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Printing.pdf">Printing</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Printing_Q&A.pdf">Printing</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
+                <!-- <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_marking_tools.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_SpecialistMarkingTools.pdf">Specialist Marking Tools</a>
                         </div>
                     </div>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
 
 
         </div>
