--- a/exercises/exercise_topics/materialsnotes.html
+++ b/exercises/exercise_topics/materialsnotes.html
@@ -125,7 +125,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\Materials\Textiles_Q&A.pdf">textiles</a>
+                            <a href="..\..\documents\Q&A\Materials\Textiles_Q&A.pdf">Textiles</a>
                         </div>
                     </div>
                 </div>
