finish adding final exercise topics

--- a/exercises/exercise_topics/FeaturesOfManufacturingIndustries.html
+++ b/exercises/exercise_topics/FeaturesOfManufacturingIndustries.html
@@ -74,13 +74,13 @@
             <h2>Features of Manufacturing in Industries</h2>
         </div>
         <div class="content-wrapper">
-            <!-- <div class="portfolio-items-wrapper-notes">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/massproduction.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_MethodsOfProduction.pdf">Methods of Production</a>
+                            <a href="..\..\documents\Q&A\features_of_manufacturing_industries\Methods of production_Q&A.pdf">Methods of Production</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/qualityControl.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_QualityMonitoringSystems.pdf">Quality Monitoring Systems</a>
+                            <a href="..\..\documents\Q&A\features_of_manufacturing_industries\Quality Monitoring Systems_Q&A.pdf">Quality Monitoring Systems</a>
                         </div>
                     </div>
                 </div>
@@ -98,14 +98,11 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/modernManufacturingMethods.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_ModernManufacturingMethodsAndSystems.pdf">Modern Manufacturing Methods and Systems</a>
+                            <a href="..\..\documents\Q&A\features_of_manufacturing_industries\Modern manufacturing methods and systems_Q&A.pdf">Modern Manufacturing Methods and Systems</a>
                         </div>
                     </div>
                 </div>
 
-            </div> -->
-            <div class="comingsoon">
-                Exam style questions and solutions coming soon!
             </div>
 
         </div>
