--- a/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -93,15 +93,15 @@
                         </div>
                     </div>
                 </div>
-<!-- 
+
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/propertyrights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_PropertyRights.pdf">Property Rights</a>
+                            <a href="..\..\documents\Q&A\information_handling_planning_exercises\Intellectual_Property_rights_Q&A.pdf">Intellectual Property Rights</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/standardsForProducts.jpg)"></div>
