--- a/exercises/exercises.html
+++ b/exercises/exercises.html
@@ -152,14 +152,14 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-wrapper">
                     <div class="portfolio-img-background" style="background-image:url(../images/portfolio8.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="exercise_topics/FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper">
                     <div class="portfolio-img-background" style="background-image:url(../images/portfolio9.jpg)"></div>
