--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -316,7 +316,7 @@
                                 <li>Good electrical insulator</li>
                                 <li>Heat resistant</li>
                                 <li>Hard</li>
-                                <li>COst effective</li>
+                                <li>Cost effective</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
