Add will name as collab

--- a/notes/notes_topics/notes_pages/product_life_cycle_notes.html
+++ b/notes/notes_topics/notes_pages/product_life_cycle_notes.html
@@ -298,7 +298,7 @@
                <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
             </div>
             <div class="footer-bottom">
-                &copy; DTBase.com | Designed by Henry Chen
+                &copy; DTBase.com | Designed by Henry Chen and Will Stevens
             </div>
         </div>
 
