--- a/notes/notes_topics/notes_pages/heat_treatments_notes.html
+++ b/notes/notes_topics/notes_pages/heat_treatments_notes.html
@@ -94,7 +94,7 @@
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Medium/High carbon steel is heated to a given temperature (below critical temperature) and held there for a period of time</li>
-                        <li>It is then dropped in water/oil (ofetn called quenching)</li>
+                        <li>It is then dropped in water/oil (often called quenching)</li>
                         <li>The metal has now been hardened which improves certain properties but makes the metal very brittle</li>
                         <li>As a result the metal is reheated to a given temperature (below critical temperature) and allowed to cool slowly</li>
                     </ul></h3>
