--- a/notes/notes_topics/notes_pages/heat_treatments_notes.html
+++ b/notes/notes_topics/notes_pages/heat_treatments_notes.html
@@ -127,7 +127,7 @@
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Hardens the surface of steels with less than 0.4% carbon content</li>
-                        <li>Carburising: the metal is placed in a box packed with powdered carbon and heat to 930C for a period of time</li>
+                        <li>Carburising: the metal is placed in a box packed with powdered carbon and heated to 930C for a period of time</li>
                         <li>Carbon is then absorbed by the metal, the depth of absoprtion is determined by the length of time if carbursing </li>
                         <li>The metal is then quenched in water which stops the carbon escaping the surface of the metal</li>
                     </ul></h3>
