--- a/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -76,14 +76,14 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_CollectionCollationAndAnalysisToMakeDecisions.pdf">Collection Collation and Analysis to Make Decisions</a>
+                            <a href="..\..\documents\Q&A\Explore_create_and_evaluate_design_ideas_Q&A.pdf">Collection Collation and Analysis to Make Decisions</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/modelCost.jpg)"></div>
