--- a/exercises/exercise_topics/FurtherProcessesAndTechniques.html
+++ b/exercises/exercise_topics/FurtherProcessesAndTechniques.html
@@ -76,14 +76,14 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/projectManagement.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
+                            <a href="..\..\documents\Q&A\further_processes_techniques_exercises\Project_management_Q&A.pdf">Project Management Systems</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/stagesOfProductLifecycle.jpg)"></div>
