--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -153,7 +153,7 @@
                 </div>
 
                 <h3><b>Question 2)</b></h3>
-                <p>The new high speed railway will decrease the time taken to travel between London and York by 15 minutes. The journey takes 2.05 hours currently. Calculate the percentage reduction in travel time.</p>
+                <p>A new high speed railway will decrease the time taken to travel between London and York by 15 minutes. The journey takes 2.05 hours currently. Calculate the percentage reduction in travel time.</p>
                                 
                 <div class="worked-example">
                     <p><b>Step 1) Calculate the current journey time in minutes:</b></p>
