--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h3>Boost your grades and achieve your academic goals with <b>DesignandTechbase.</b></h3> 
                     <h3>Start your revision with us today!</h3>
             </div>
-            <h2><hr>What DTBase provides:</h2>   
+            <h2><hr>What DTBase provides</h2>   
             <div class="provideindex">
 
                 <div class = "provideindex_text">
@@ -108,6 +108,46 @@
                 <img class="Coursework_pic" src="images/coursework_pic.jpg" alt="Coursework Examples">
 
             </div> 
+
+            <br>
+            <hr>
+
+            <h2 style="text-align: center;">Testimonials</h2>
+            <div class="testimony_wrapper">
+                <div class="testi_comment_wrapper">
+                    <div class="testi_col">
+                        <br><br>
+                        <h3 class="testi_words">
+                            "Very professinal and thorough. Was able to add value right from the first introductory meeting. Would definitely recommend."
+                        </h3>
+                        <div class="star_and_name">
+                            <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
+                            <h5><em>-Parent from London-</em></h4>
+                        </div>
+                    </div>
+                    <div class="testi_col">
+                        <h3 class="testi_words">
+                            "Great quality of teaching, and very friendly! I always leave lessons with a greater understanding and confidence in the topic.
+                            He is always very well organised and has things prepared and ready to get started straight away with non faff."
+                        </h3>
+                        <div class="star_and_name">
+                            <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
+                            <h5><em>-Student-</em></h5>
+                            </div>
+                    </div>
+                    <div class="testi_col">
+                        <h3 class="testi_words">
+                            "Excellent DT tutor for my son. They have taught my son the exam techniques and the methodology of 
+                            answering questions with the correct keywords. Their guidance boosted my son's confidence in the preparation for the DT GCSE exam."
+                        </h3>
+                        <div class="star_and_name">
+                            <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
+                            <h5><em>-Parent from Doha-</em></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
 
                 <h2><hr>Are you looking for an A-level or GCSE Design and Technology tutor?</h2> 
             <div class="tutoring">
