--- a/tutoring.html
+++ b/tutoring.html
@@ -71,7 +71,6 @@
         </header>     
 
             <div class="about-description">
-                <!--<img class="about-pic" src="images/ws_mugshot.jpg">-->
                 <div class="about-text">
                     <h1>DesignandTechBase Tutoring Service<br></h1>
                     <div class = "about_tutoring_text">
@@ -100,6 +99,46 @@
                     </div> 
                 </div> 
             </div>
+
+            <hr>
+
+            <h2 style="text-align: center;">Testimonials</h2>
+            <div class="testimony_wrapper">
+                <div class="testi_comment_wrapper">
+                    <div class="testi_col">
+                        <br><br>
+                        <h3 class="testi_words">
+                            "Very professinal and thorough. Was able to add value right from the first introductory meeting. Would definitely recommend."
+                        </h3>
+                        <div class="star_and_name">
+                            <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
+                            <h5><em>-Parent from London-</em></h4>
+                        </div>
+                    </div>
+                    <div class="testi_col">
+                        <h3 class="testi_words">
+                            "Great quality of teaching, and very friendly! I always leave lessons with a greater understanding and confidence in the topic.
+                            He is always very well organised and has things prepared and ready to get started straight away with non faff."
+                        </h3>
+                        <div class="star_and_name">
+                            <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
+                            <h5><em>-Student-</em></h5>
+                            </div>
+                    </div>
+                    <div class="testi_col">
+                        <h3 class="testi_words">
+                            "Excellent DT tutor for my son. They have taught my son the exam techniques and the methodology of 
+                            answering questions with the correct keywords. Their guidance boosted my son's confidence in the preparation for the DT GCSE exam."
+                        </h3>
+                        <div class="star_and_name">
+                            <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
+                            <h5><em>-Parent from Doha-</em></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <hr>
 
             <div class="footer">
                 <div class="footer-content">
