--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -23,6 +23,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-YZG2YDGNFN');
+    gtag('config', 'AW-11234376367');
     </script>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
@@ -59,7 +60,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../exercises/exercises.html">Exercises</a>
+                    <a href="../exercises/exercises.html">Questions</a>
                 </div>
 
                 <div class="nav-link-wrapper">
