--- a/thanks.html
+++ b/thanks.html
@@ -22,6 +22,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-YZG2YDGNFN');
+    gtag('config', 'AW-11234376367');
     </script>
 </head>
 
@@ -53,7 +54,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="exercises.html">Exercises</a>
+                    <a href="exercises.html">Questions</a>
                 </div>
 
                 <div class="nav-link-wrapper">
